ansible/ing.yml

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: test-ingress
  namespace: test
  annotations:    
    kubernetes.io/ingress.allow-http: "false"
    kubernetes.io/ingress.class: gce-internal
    kubernetes.io/ingress.regional-static-ip-name: eq
spec:
  rules:
  - host: eq.test.dns.com
    http:
      paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: test-svc 
              port:
                number: 8081
